--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,11 @@
+html {
+    box-sizing: border-box;
+}
+
+*, *::before, *::after {
+    box-sizing: inherit;
+}
+
 main {
     display: flex;
     flex-direction: column;
