--- a/css/style.css
+++ b/css/style.css
@@ -17,6 +17,10 @@ main.wrapper {
     margin: auto;
 }
 
+ul {
+    list-style-type: none;
+  }
+
 .dark {
     background-color: #000;
     color: #DEC9E9;
@@ -29,17 +33,17 @@ main.wrapper {
 h1 {
     font-family: Wix Madefor Display;
     font-weight: 800;
-    font-size: 2.5rem;
+    font-size: 2.5em;
 }
 
 h2 {
     font-family: Wix Madefor Display;
     font-weight: 400;
-    font-size: 2rem;
+    font-size: 2em;
 }
 
 h3 {
     font-family: Wix Madefor Display;
     font-weight: 600;
-    font-size: 1rem;
+    font-size: 1em;
 }
