--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,7 @@ html {
 
 body {
     font-family: Nunito;
+    font-size: 18px;
     color: #fff;
     line-height: 1.5;
 }
@@ -33,17 +34,22 @@ ul {
 h1 {
     font-family: Wix Madefor Display;
     font-weight: 800;
-    font-size: 2.5em;
+    text-shadow: #000;
+    font-size: 3rem;
 }
 
 h2 {
     font-family: Wix Madefor Display;
     font-weight: 400;
-    font-size: 2em;
+    font-size: 2rem;
 }
 
 h3 {
     font-family: Wix Madefor Display;
     font-weight: 600;
-    font-size: 1em;
+    font-size: 1rem;
+}
+
+.team {
+    filter: grayscale(100%);
 }
